<resources>
    <string name="app_name">Hololive Recycler View</string>
    <string name="member_name">Member Name</string>
    <string name="region">Region</string>
    <string name="description">Description</string>
    <string name="youtube_icon">Youtube Icon</string>
    <string name="profile_pics">Profile Pics</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="generation">Generation</string>
    <string name="debut_date">Debut date :</string>
    <string name="share">Share</string>
    <string name="linkedin">linkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="github">Github</string>
    <string name="email">fxguntur04@gmail.com</string>
    <string name="fullname">Fx. Guntur Putra Susanto</string>
    <string-array name="data_name">
        <item>Hoshimachi Suisei</item>
        <item>Shirakami Fubuki</item>
        <item>Sakamata Chloe</item>
        <item>Todoroki Hajime</item>
        <item>Ayunda Risu</item>
        <item>Vestia Zeta</item>
        <item>Kaela Kovalskia</item>
        <item>Hakos Baelz</item>
        <item>Gawr Gura</item>
        <item>Koseki Bijou</item>
    </string-array>
    <string-array name="data_generation">
        <item>Hololive 0th Generation</item>
        <item>Hololive 1st Generation / Hololive GAMERS</item>
        <item>Hololive 6th Generation / holoX</item>
        <item>Hololive ReGLOSS</item>
        <item>Hololive Indonesia Generation 1</item>
        <item>Hololive Indonesia Generation 3</item>
        <item>Hololive Indonesia Generation 3</item>\
        <item>Hololive English Promise</item>
        <item>Hololive English Myth</item>
        <item>Hololive English Advent</item>
    </string-array>
    <string-array name="data_debut">
        <item>22 Maret 2018</item>
        <item>1 Juni 2018</item>
        <item>29 November 2021</item>
        <item>10 September 2023</item>
        <item>10 April 2020</item>
        <item>25 March 2022</item>
        <item>26 March 2022</item>
        <item>23 August 2021</item>
        <item>13 September 2020</item>
        <item>30 July 2023</item>
    </string-array>
    <string-array name="data_region">
        <item>Hololive JP</item>
        <item>Hololive JP</item>
        <item>Hololive JP</item>
        <item>Hololive JP</item>
        <item>Hololive ID</item>
        <item>Hololive ID</item>
        <item>Hololive ID</item>
        <item>Hololive EN</item>
        <item>Hololive EN</item>
        <item>Hololive EN</item>
    </string-array>
</resources>