<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="?attr/colorSurface"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="8dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/profile_pics"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                >
                <TextView
                    android:id="@+id/tvName"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_name"
                    />
                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/region" />
                <TextView
                    android:id="@+id/tvGeneration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generation" />
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debut_date" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            style="@style/buttonColor"
            />
        <TextView
            android:id="@+id/labelDescription"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            />
        <TextView
            android:id="@+id/tvDesc"
            android:layout_marginHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/description" />

    </LinearLayout>
</ScrollView>