<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".AboutMeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18"
                android:src="@drawable/profile_pics" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/fullname"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLinkedIn"
                style="@style/buttonColor"
                android:layout_marginTop="24dp"
                android:text="@string/linkedin"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnInstagram"
                style="@style/buttonColor"
                android:layout_marginTop="16dp"
                android:text="@string/instagram"
                app:layout_constraintEnd_toEndOf="@+id/btnLinkedIn"
                app:layout_constraintStart_toStartOf="@+id/btnLinkedIn"
                app:layout_constraintTop_toBottomOf="@+id/btnLinkedIn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGithub"
                style="@style/buttonColor"
                android:layout_marginTop="16dp"
                android:text="@string/github"
                app:layout_constraintEnd_toEndOf="@+id/btnInstagram"
                app:layout_constraintStart_toStartOf="@+id/btnInstagram"
                app:layout_constraintTop_toBottomOf="@+id/btnInstagram" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>